// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test TextsourceSans no style in props 1`] = `
<Text
  style={
    Object {
      "fontFamily": "SourceSansPro_400Regular",
      "fontSize": 18,
    }
  }
>
  TestText
</Text>
`;

exports[`Test TextsourceSans no style in props 2`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "SourceSansPro_400Regular",
        "fontSize": 18,
      },
      Object {
        "fontSize": 10,
      },
    ]
  }
>
  TestText
</Text>
`;
